Obsolete Sodium SR1 streams
We nominally support reading Sodium SR1 streams, but do not support writing
them out.

Change-Id: Iec194a9f411f926996175781eeeb770a5f6884a3
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>